--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 html {
     height: 100%;
 }
@@ -44,10 +45,10 @@ footer {
 
 
 h1 {
+    text-align: center;
     font-size: 40px;
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(0, 0, 0, 0.445);
 }
 
 p { 
@@ -55,7 +56,6 @@ p {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgba(0, 0, 0, 0.445);
-    
 }
 
 a{
@@ -72,6 +72,23 @@ nav a {
 }
 
 .topnav a.active {
-    background-color: #BB574A;
-    color: white;
+    color: red;
 } 
+
+.text {
+    color: whitesmoke;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+}
+
+.text h2 {
+    font-size: 30px;
+}
+
+.text p1 {
+    font-size: 15px;
+}
+
+.text p2{
+    text-align: start;
+}
