--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
 }
 
 nav {
-    background-color: rgba(0, 0, 0, 0.592);
+    background-color: rgba(0, 0, 0, 0.719);
     text-align: center;
     padding-top: 14px;
     padding-bottom: 14px;
@@ -37,8 +37,15 @@ main {
     padding-right: 240px;
 }
 
+.home_text{
+    background-color: rgba(0, 0, 0, 0.719);
+    padding: 10%;
+    width: 75%;
+}
+
+
 footer {
-    background-color: rgba(0, 0, 0, 0.592);
+    background-color: rgba(0, 0, 0, 0.719);
     height: 100px;
 }
 
@@ -82,11 +89,11 @@ nav a {
 }
 
 .text h2 {
-    font-size: 30px;
+    font-size: 28px;
 }
 
 .text p1 {
-    font-size: 15px;
+    font-size: 16px;
 }
 
 .text p2{
